--- a/portfolio.html
+++ b/portfolio.html
@@ -44,10 +44,20 @@
         </nav>
         <ul class="header-group">
           <li class="list-item">
-            <a class="header-nav-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a class="header-nav-link link" href="mailto:info@devstudio.com">
+              <svg class="icons-header" width="16" height="12">
+                <use href="./images/icons.svg#envelope"></use>
+              </svg>
+              info@devstudio.com
+            </a>
           </li>
           <li class="list-item">
-            <a class="header-nav-link link" href="tel:+380961111111">+38 096 111 11 11</a>
+            <a class="header-nav-link link" href="tel:+380961111111">
+              <svg class="icons-header" width="10" height="16">
+                <use href="./images/icons.svg#smartphone"></use>
+              </svg>
+              +38 096 111 11 11
+            </a>
           </li>
         </ul>
       </div>
@@ -64,151 +74,228 @@
             <li class="list-item"><button class="filter-btn" type="button">Маркетинг</button></li>
           </ul>
           <ul class="list filter-list">
-            <li class="filter-list-item">
-              <img
-                src="./images/portfolio/img-1.jpg"
-                alt="Page in notebook with peoples"
-                class="img"
-                width="370"
-                height="294"
-              />
-              <div class="filter-foto-desc">
-                <h2 class="filter-subtitle">Технокряк</h2>
-                <p class="filter-desc">Веб-сайт</p>
-              </div>
-            </li>
-            <li class="filter-list-item">
-              <img
-                src="./images/portfolio/img-2.jpg"
-                alt="Two men plays bascketball"
-                class="img"
-                width="370"
-                height="294"
-              />
-              <div class="filter-foto-desc">
-                <h2 class="filter-subtitle">Постер New Orlean vs Golden Star</h2>
-                <p class="filter-desc">Дизайн</p>
-              </div>
-            </li>
-            <li class="filter-list-item">
-              <img
-                src="./images/portfolio/img-3.jpg"
-                alt="The emblem of restaurant"
-                class="img"
-                width="370"
-                height="294"
-              />
-              <div class="filter-foto-desc">
-                <h2 class="filter-subtitle">Ресторан Seafood</h2>
-                <p class="filter-desc">Додаток</p>
-              </div>
-            </li>
-            <li class="filter-list-item">
-              <img
-                src="./images/portfolio/img-4.jpg"
-                alt="The headphones"
-                class="img"
-                width="370"
-                height="294"
-              />
-              <div class="filter-foto-desc">
-                <h2 class="filter-subtitle">Проєкт Prime</h2>
-                <p class="filter-desc">Маркетинг</p>
-              </div>
-            </li>
-            <li class="filter-list-item">
-              <img
-                src="./images/portfolio/img-5.jpg"
-                alt="Two boxes"
-                class="img"
-                width="370"
-                height="294"
-              />
-              <div class="filter-foto-desc">
-                <h2 class="filter-subtitle">Проєкт Boxes</h2>
-                <p class="filter-desc">Додаток</p>
-              </div>
-            </li>
-            <li class="filter-list-item">
-              <img
-                src="./images/portfolio/img-6.jpg"
-                alt="The Website opened at the monitor"
-                class="img"
-                width="370"
-                height="294"
-              />
-              <div class="filter-foto-desc">
-                <h2 class="filter-subtitle">Inspiration has no Borders</h2>
-                <p class="filter-desc">Веб-сайт</p>
-              </div>
-            </li>
-            <li class="filter-list-item">
-              <img
-                src="./images/portfolio/img-7.jpg"
-                alt="The open book"
-                class="img"
-                width="370"
-                height="294"
-              />
-              <div class="filter-foto-desc">
-                <h2 class="filter-subtitle">Видання Limited Edition</h2>
-                <p class="filter-desc">Дизайн</p>
-              </div>
-            </li>
-            <li class="filter-list-item">
-              <img
-                src="./images/portfolio/img-8.jpg"
-                alt="The lanyard tag"
-                class="img"
-                width="370"
-                height="294"
-              />
-              <div class="filter-foto-desc">
-                <h2 class="filter-subtitle">Проєкт LAB</h2>
-                <p class="filter-desc">Маркетинг</p>
-              </div>
-            </li>
-            <li class="filter-list-item">
-              <img
-                src="./images/portfolio/img-9.jpg"
-                alt="Two hands works on notebook"
-                class="img"
-                width="370"
-                height="294"
-              />
-              <div class="filter-foto-desc">
-                <h2 class="filter-subtitle">Growing Business</h2>
-                <p class="filter-desc">Додаток</p>
-              </div>
-            </li>
+            <a class="link filter-link" href="">
+              <li class="filter-list-item">
+                <img
+                  src="./images/portfolio/img-1.jpg"
+                  alt="Page in notebook with peoples"
+                  class="img"
+                  width="370"
+                  height="294"
+                />
+                <div class="filter-foto-desc">
+                  <h2 class="filter-subtitle">Технокряк</h2>
+                  <p class="filter-desc">Веб-сайт</p>
+                </div>
+              </li>
+            </a>
+            <a class="link filter-link" href="">
+              <li class="filter-list-item">
+                <img
+                  src="./images/portfolio/img-2.jpg"
+                  alt="Two men plays bascketball"
+                  class="img"
+                  width="370"
+                  height="294"
+                />
+                <div class="filter-foto-desc">
+                  <h2 class="filter-subtitle">Постер New Orlean vs Golden Star</h2>
+                  <p class="filter-desc">Дизайн</p>
+                </div>
+              </li>
+            </a>
+            <a class="link filter-link" href="">
+              <li class="filter-list-item">
+                <img
+                  src="./images/portfolio/img-3.jpg"
+                  alt="The emblem of restaurant"
+                  class="img"
+                  width="370"
+                  height="294"
+                />
+                <div class="filter-foto-desc">
+                  <h2 class="filter-subtitle">Ресторан Seafood</h2>
+                  <p class="filter-desc">Додаток</p>
+                </div>
+              </li>
+            </a>
+            <a class="link filter-link" href="">
+              <li class="filter-list-item">
+                <img
+                  src="./images/portfolio/img-4.jpg"
+                  alt="The headphones"
+                  class="img"
+                  width="370"
+                  height="294"
+                />
+                <div class="filter-foto-desc">
+                  <h2 class="filter-subtitle">Проєкт Prime</h2>
+                  <p class="filter-desc">Маркетинг</p>
+                </div>
+              </li>
+            </a>
+            <a class="link filter-link" href="">
+              <li class="filter-list-item">
+                <img
+                  src="./images/portfolio/img-5.jpg"
+                  alt="Two boxes"
+                  class="img"
+                  width="370"
+                  height="294"
+                />
+                <div class="filter-foto-desc">
+                  <h2 class="filter-subtitle">Проєкт Boxes</h2>
+                  <p class="filter-desc">Додаток</p>
+                </div>
+              </li>
+            </a>
+            <a class="link filter-link" href="">
+              <li class="filter-list-item">
+                <img
+                  src="./images/portfolio/img-6.jpg"
+                  alt="The Website opened at the monitor"
+                  class="img"
+                  width="370"
+                  height="294"
+                />
+                <div class="filter-foto-desc">
+                  <h2 class="filter-subtitle">Inspiration has no Borders</h2>
+                  <p class="filter-desc">Веб-сайт</p>
+                </div>
+              </li>
+            </a>
+            <a class="link filter-link" href="">
+              <li class="filter-list-item">
+                <img
+                  src="./images/portfolio/img-7.jpg"
+                  alt="The open book"
+                  class="img"
+                  width="370"
+                  height="294"
+                />
+                <div class="filter-foto-desc">
+                  <h2 class="filter-subtitle">Видання Limited Edition</h2>
+                  <p class="filter-desc">Дизайн</p>
+                </div>
+              </li>
+            </a>
+            <a class="link filter-link" href="">
+              <li class="filter-list-item">
+                <img
+                  src="./images/portfolio/img-8.jpg"
+                  alt="The lanyard tag"
+                  class="img"
+                  width="370"
+                  height="294"
+                />
+                <div class="filter-foto-desc">
+                  <h2 class="filter-subtitle">Проєкт LAB</h2>
+                  <p class="filter-desc">Маркетинг</p>
+                </div>
+              </li>
+            </a>
+            <a class="link filter-link" href="">
+              <li class="filter-list-item">
+                <img
+                  src="./images/portfolio/img-9.jpg"
+                  alt="Two hands works on notebook"
+                  class="img"
+                  width="370"
+                  height="294"
+                />
+                <div class="filter-foto-desc">
+                  <h2 class="filter-subtitle">Growing Business</h2>
+                  <p class="filter-desc">Додаток</p>
+                </div>
+              </li>
+            </a>
           </ul>
         </div>
       </section>
     </main>
     <footer class="footer">
-      <div class="container">
-        <a class="logo footer-logo" href="./index.html"
-          ><span class="logo-accent">Web</span><span class="footer-logo-cl">Studio</span></a
-        >
-        <address class="footer-address">
-          <ul class="list">
-            <li class="list-item footer-list-item"
-              ><a
-                class="link"
-                href="https://goo.gl/maps/FVtRiQrszEMNCLTm8"
+      <div class="container footer-wrap">
+        <div>
+          <a class="logo footer-logo" href="./index.html"
+            ><span class="logo-accent">Web</span><span class="footer-logo-cl">Studio</span></a
+          >
+          <address class="footer-address">
+            <ul class="list">
+              <li class="list-item footer-list-item">
+                <a
+                  class="link footer-link"
+                  href="https://goo.gl/maps/FVtRiQrszEMNCLTm8"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  >м. Київ, пр-т Лесі Українки, 26</a
+                >
+              </li>
+              <li class="list-item footer-list-item footer-item-cl">
+                <a class="link footer-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+              </li>
+              <li class="list-item footer-list-item footer-item-cl">
+                <a class="link footer-link" href="tel:+380961111111">+38 096 111 11 11</a>
+              </li>
+            </ul>
+          </address>
+        </div>
+        <div>
+          <h2 class="footer-contacts-title">приєднуйтесь</h2>
+          <ul class="list socials">
+            <li>
+              <a
+                class="link social-link footer-social-link"
+                href="https://instagram.com"
+                aria-label="Instagram"
                 target="_blank"
                 rel="noopener noreferrer"
-                >м. Київ, пр-т Лесі Українки, 26</a
-              ></li
-            >
-            <li class="list-item footer-list-item footer-item-cl"
-              ><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li
-            >
-            <li class="list-item footer-list-item footer-item-cl"
-              ><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li
-            >
+              >
+                <svg class="socials-icon" width="20" height="20">
+                  <use href="./images/icons.svg#instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a
+                class="link social-link footer-social-link"
+                href="https://twitter.com"
+                aria-label="Twitter"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
+                <svg class="socials-icon" width="20" height="20">
+                  <use href="./images/icons.svg#twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a
+                class="link social-link footer-social-link"
+                href="https://facebook.com"
+                aria-label="Facebook"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
+                <svg class="socials-icon" width="20" height="20">
+                  <use href="./images/icons.svg#facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a
+                class="link social-link footer-social-link"
+                href="https://linkedin.com"
+                aria-label="Linkedin"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
+                <svg class="socials-icon" width="20" height="20">
+                  <use href="./images/icons.svg#linkedin"></use>
+                </svg>
+              </a>
+            </li>
           </ul>
-        </address>
+        </div>
       </div>
     </footer>
   </body>
